rancher/rancher_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
  labels:
    app: rancher
spec:
  selector:
    matchLabels:
      app: rancher
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
        - name: rancher
          image: "ruanbekker/logos:rancher"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
