rancher/rancher_clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: rancherservice
spec:
  selector:
    app: rancher
  type: ClusterIP
  clusterIP: 10.43.0.50
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
