rancher/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: rancher-secret
      hosts:
        - app1.sabine-cours-datascientest.dns-dynamic.net
  rules:
  - host: app1.sabine-cours-datascientest.dns-dynamic.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: rancher
              port:
                number: 80
